--- a/style.css
+++ b/style.css
@@ -2,64 +2,132 @@
   margin: 0;
   padding: 0;
 }
-#lastDisplay {
-  height: 43px;
+:root {
+  --primaryColor: rgb(29, 82, 134);
+  --primaryColorBoxShadow: 29, 82, 134;
+  --secondaryColor: #e0e0e0;
+  --textColor: #ffffff;
+  --backgroundColor: #e0dddd70;
+  --backgroundShadow: gray;
+  --fontFamily: "Poppins", sans-serif;
 }
-#currenDisplay {
-  height: 55px;
+button {
+  background-color: var(--primaryColor);
+  color: var(--textColor);
+  font-size: 1rem;
+  border-radius: 0.3rem;
+  border: none;
 }
 
-.calculator {
+button:hover {
+  opacity: 80%;
+  cursor: pointer;
+}
+
+.icon {
+  height: 1rem;
+  width: 1rem;
+}
+
+.noteApp {
   display: flex;
+  width: 100%;
+  height: 100vh;
+  font-family: var(--fontFamily);
 }
 
-.calcContainer {
-  flex: 1;
+/*  Sidebar   */
+.sidebar {
+  padding: 1rem;
+  width: 240px;
+  border-right: solid gray 1px;
+  overflow: auto;
 }
 
-.display {
+.createNote {
+  font-size: 0.8rem;
+  padding: 1rem;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  width: 100%;
+  transition: background-color 0.3s ease;
+}
+
+/* Card */
+.noteCard {
+  padding: 0.8rem;
+  margin-top: 1rem;
+  background-color: var(--backgroundColor);
+  box-shadow: 0 0 8px 1px rgba(var(--primaryColorBoxShadow), 0.4);
+  border-radius: 0.5rem;
+}
+
+.noteCard:hover {
+  background-color: rgba(var(--primaryColorBoxShadow), 0.1);
+  cursor: pointer;
+}
+.cardHeader {
+  font-weight: bold;
+}
+
+.cardHeader,
+.cardText {
+  margin-bottom: 0.5rem;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.cardText {
+  font-size: 0.7rem;
+  margin-bottom: 0.5rem;
+  color: var(--backgroundShadow);
+}
+
+.cardDate {
+  font-size: 0.6rem;
+  font-style: italic;
+  text-align: right;
+}
+
+/*  Main Content   */
+.mainContent {
+  padding: 1rem;
+  width: 100%;
+}
+
+#inputTextArea,
+#inputHeader {
+  border: none;
+  outline: none;
+}
+
+#inputHeader {
+  font-size: 1.8rem;
+}
+
+#inputTextArea {
+  font-size: 1rem;
+  width: 100%;
+  height: calc(100vh - 6rem);
+}
+
+.titleAndButtons {
+  display: flex;
+  gap: 0.8rem;
+  margin-bottom: 1rem;
+}
+
+.saveNote,
+.deleteNote,
+.createNote {
+  padding: 0.8rem;
+  color: var(--textColor);
+}
+.saveNote,
+.deleteNote {
   align-items: flex-end;
-  height: 130px;
-}
-
-.currentDisplay {
-  font-size: 3rem;
-  align-items: flex-end;
-  margin: 0.5rem;
-}
-
-.lastDisplay {
-  font-size: 2.3rem;
-  margin: 0.5rem;
-}
-
-.buttons {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 0.3rem;
-  margin: 0.4rem;
-}
-
-.btn {
-  font-size: 2.3rem;
-  padding: 2rem 0 2rem 0;
-  border-radius: 5px;
-  border: solid 1px grey;
-}
-
-.historyContainer {
-  display: flex;
-  flex-direction: column;
-  border-left: solid 1px gray;
-}
-
-.history {
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: flex-end;
-  width: 15rem;
-  font-size: 2rem;
-  padding: 1.2rem;
 }
