--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ button:hover {
   transition: background-color 0.3s ease;
 }
 
+.cardWrapper {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 /* Card */
 .noteCard {
   padding: 0.8rem;
